Mon Sep 25 18:33:27 PDT 2006

An alternative implementation of fp, fastfp.c, works now. In the process
I fixed code that assumed the data field of element_t to be an mpz_t.

Some pairing types benefit:

a	0.018461	0.008570
d159	0.036698	0.032024
d201	0.060269	0.053314
d224	0.072389	0.062961
e	0.100093	0.100459
f	0.301455	0.301296

Unfortunately type F is slower now, but there is still room to optimize.
Some parts of fastfp.c are stopgap measures to get it working. Now that it
seems okay, I'll start cleaning it up.

Sun Sep 24 20:53:44 PDT 2006

Implemented preprocessing for types A and D, also cleaned up type D a little.
Second column is with preprocessing. (On my laptop, as usual.)

a	0.019666	0.009980
d159	0.043030	0.038018
d201	0.066828	0.059379
d224	0.078379	0.068498
e	0.100978	0.101003
f	0.263881	0.264016

[0.3.5]

Sun Sep 24 13:00:40 PDT 2006

I don't know if GCC or GMP improved, but the benchmarks improved without
intervention from me. I tweaked a few lines here and there (e.g. replaced
mul_si with element_double, used mpz_powm_ui for squaring) to shave a
tiny bit more time off.

a	0.019855
d159	0.054426
d201	0.080596
d224	0.095677
e	0.101124
f	0.265249

Sun Sep 24 03:41:16 PDT 2006

The previous tarballs won't build because bce/bce.h is not included in
the distribution. I had assumed if the autotools could build it, then
they'd also know what to put in tarballs automatically.

Code cleanup, minor bugfixes and documentation edits.

[0.3.4]

Sat Sep 23 15:21:39 PDT 2006

BGN curves have been renamed to A1 curves. This makes more sense since
they really are type A curves, just with composite order, and "BGN" would
be better for referring to a certain cryptosystem, not the underlying pairing
it uses. Also, it is possible to have other kinds of pairings with composite
order e.g type B pairings (which have not been implemented yet).

More work was done on the manual. The different types of pairing parameters